--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
 
     <i class="fab fa-linkedin"></i>
 
+    <form name="contact" class="contactform" action="" method="post">
+      <div class="nameform">
+        <label for="nameinput" class="label_input_wrap">Name</label>
+        <input type="text" name="nameinput" id="nameinput" />
+      </div>
+
+      <div class="emailform">
+        <label for="emailinput" class="label_input_wrap">Email</label>
+        <input type="email" name="emailinput" id="emailinput" />
+      </div>
+
+      <div class="comment">
+        <label for="comments" class="label_input_wrap">Message</label>
+        <textarea name="comments" id="comments" rows="8" cols="80"></textarea>
+      </div>
+
+      <div class="reset">
+        <input type="reset" value="Refresh">
+      </div>
+
+      <div class="submit">
+        <input type="submit" value="Send">
+      </div>
+    </form>
 
 
 
