added pseudo classes, pseudo elements, and more css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!--Font Awesome -->
     <script src="https://kit.fontawesome.com/7c9dc3d97e.js" crossorigin="anonymous"></script>
 
+
   </head>
   <body>
     <h1>let's chat</h1>
@@ -26,8 +27,8 @@
       </div>
 
       <div class="written">
-        <p><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
-        <p><a href="tel:+12405294709">(240) 529-4709</a></p>
+        <p class="email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
+        <p class="phone"><a href="tel:+12405294709">(240) 529-4709</a></p>
         <p>Washington, D.C.</p>
         <a href="https://www.linkedin.com/in/kayce-georgi-1591572b/" target="_blank"><i class="fab fa-linkedin"></i></a>
       </div>
