--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="https://www.linkedin.com/in/kayce-georgi-1591572b/" target="_blank"><i class="fab fa-linkedin"></i></a>
       </div>
 
-      <form name="contact" class="contactform" action="" method="post">
+      <form id="test_form" class="contactform" name="test_form" method="post" action="form.php" onsubmit="return validateForm(this)">
         <div class="nameform">
           <label for="nameinput" class="label_input_wrap">Name</label>
           <input type="text" name="nameinput" id="nameinput" />
@@ -58,12 +58,6 @@
         </div>
       </form>
     </div>
-
-
-
-
-
-
 
   </body>
 </html>
